remove apache-commons dependency